RESOLVED FIXED25134
Tabbing away from an animating page and back breaks animations (accelerated compositing)
https://bugs.webkit.org/show_bug.cgi?id=25134
Summary Tabbing away from an animating page and back breaks animations (accelerated c...
Chris Marrin
Reported 2009-04-10 14:14:39 PDT
With accelerated compositing on tabbing away from a page stops animations. When returning they should restart where they left off, but they do not.
Attachments
Patch (2.76 KB, patch)
2009-04-10 14:42 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2009-04-10 14:42:00 PDT
Chris Marrin
Comment 2 2009-04-10 14:45:35 PDT
Sending WebCore/ChangeLog Sending WebCore/page/animation/AnimationBase.cpp Sending WebCore/page/animation/AnimationController.cpp Transmitting file data ... Committed revision 42406.
Note You need to log in before you can comment on or make changes to this bug.