        Fixed https://bugs.webkit.org/show_bug.cgi?id=25134

This both fixes a bug where I was not sending in the right time
        to continue the animation and was not recomputing current time
        when coming out of suspend.



Canonical link: https://commits.webkit.org/34460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42406 268f45cc-cd09-0410-ab3c-d52691b4dbfc